седьмая домашка, спустя время)

--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -277,50 +277,97 @@
 		<p class="answer">Метод  document.getElementById() возвращает ссылку на элемент, имеющий  индивидуальный id, метод  document.querySelectorAll() Возвращает коллекцию элементов</p>
 	</div>
 	<div class="pair dom">
-		<p class="question">5. Как изменить стили элемента? Какая существует особенность с правилам, в названии которых есть дефис (border-radius, padding-left)?</p>
-		<p class="answer">Стиль элемента изменяется свойством element.style. Для правильной записи свойств с префиксами используется запись MozBorderRadius, вместо -moz-border-radius, либо так  [‘-moz-border-radius’]</p>
+		<p class="question">5. Как изменить стили элемента? Какая существует особенность с правилам, в названии которых есть дефис (border-radius, padding-left)? Какая особенность есть со свойством float? Можно ли задать элементу сразу несколько CSS-свойств?</p>
+		<p class="answer">Стиль элемента изменяется свойством element.style. Для правильной записи свойств с префиксами используется запись MozBorderRadius, вместо -moz-border-radius, либо так  [‘-moz-border-radius’]. Слово float зарезервировано в стандарте JavaScript, поэтому не может біть использовано для задания свойства, вместо elem.style.float нужно писать elem.style.cssFloat. Несколько свойств можно задать с помощью свойства "style.cssText"</p>
 	</div>
 	<div class="pair dom">
-		<p class="question">6. Чем отличается коллекция от массива?</p>
+		<p class="question">6. Чем отличается HTMLCollection / NodeList от массива?</p>
 		<p class="answer">Коллекции от массива отличается тем, что у коллекции элементов отсутствуют методы массивов, но коллекции имеют свои собственные методы.</p>
 	</div>
 	<div class="pair dom">
 		<p class="question">7. Как обратиться к родителю элемента? А к потомку?</p>
 		<p class="answer">Для обращение к родителю элемента используется свойство  element.parentNode; к потомку -  element.childNode, или children.</p>
 	</div>
+								
 	<div class="pair dom">
-		<p class="question">8. Опиши, какие методы используются для работы с классами? Что они делают?</p>
+		<p class="question">8. Зачем нужны data-* атрибуты? И как получить доступ к значению такого атрибута?</p>
+		<p class="answer">Они нужны для того, что бы нестандартные атрибуты, для которых не создаются DOM-свойства, были доступны в java script. Для обращения к ним как к свойствам применяется специальное свойство dataset </p>
+	</div>
+	<div class="pair dom">
+		<p class="question">9. Опиши, какие методы используются для работы с классами? Что они делают?</p>
 		<p class="answer">При работе с классами можно вывести их в виде строки (className), либо в виде обьекта (сlassList), который имеет следующие методы:
 elem.classList.contains("class")- проверяет, есть ли такой класс у элмента, и возхвращает true если есть, false - если нет.
 elem.classList.add/remove("class")- добавляет к элементу/удаляет у элемента указанные классы
 elem.classList.toggle("class") проверяет, есть ли указанный класс в элементе, если есть - добавляет, если есть - удаляет.</p>
 	</div>
+	
 	<div class="pair dom">
-		<p class="question">9. Что находится в свойстве Element.innerHTML?</p>
-		<p class="answer">В свойстве innerHTML находиться полученное содержимое HTML страницы, а в свойстве Element.innerHTML будет находиться содержимое элемента в виде строки.</p>
-	</div>
-	<div class="pair dom">
-		<p class="question">10. Как работает метод Element.matches()?</p>
+		<p class="question">11. Как работает метод Element.matches()?</p>
 		<p class="answer">Данный метод проверяет соотвестсвие  элемента (как объекта),  переданному в параметры css селектору, и возвращает true  или false.</p>
 	</div>
 	<div class="pair dom">
-		<p class="question">11. Зачем нужна библиотека Modernizr?</p>
+		<p class="question">12. Зачем нужна библиотека Modernizr?</p>
 		<p class="answer">Эта библиотека представляет набор быстрых тестов для браузера пользователя, на предмет того, может ли данная версия браузера поддерживать современные технологии, в противном случае разработчик может адаптировать код для более старых версий.</p>
 	</div>
 	<div class="pair dom">
-		<p class="question">11. Какие методы создают новый элемент, текстовую ноду?</p>
-		<p class="answer">Метод document.createElement() создает новый элемент в DOM. Метод для создания текстовой ноды: document.createTextNode().</p>
+		<p class="question">13. Зачем нужна библиотека jQuery?</p>
+		<p class="answer">jQuery позволяет изменять содержимое HTML-документоа, путем манипуляции обьектами DOM модели, но с более компактным кодом, чем в простом JS; обеспечивает кроссбраузерную поддержку приложений, </p>
+	</div>
+				
+	<div class="pair dom">
+		<p class="question">10. Какие методы создают новый элемент, текстовую ноду? А какие удаляют?</p>
+		<p class="answer">Метод document.createElement() создает новый элемент в DOM. Метод для создания текстовой ноды: document.createTextNode(). Первый метод удаляет дочерний элемент из списка элементов родительской ноды: parentElem.removeChild(el); второй – parentElem.removeChild(), принимает два параметра (newElem, elem) удаляет элемент «elem» заменяя его на новый «newElem».</p>
 	</div>
 	<div class="pair dom">
-		<p class="question">12. Чем отличаются Node.appendChild(), Node.insertBefore() и Element.insertAdjacentHTML()?</p>
-		<p class="answer">Node.appendChild() добавляет ноду в конец списка дочерних элементов родительской ноды; Node.insertBefore() добавляет элемент в список дочерних,но перед указанным в параметрах метода элементом; Element.insertAdjacentHTML() вставляет элемент конкретно указанную в параметрах, позицию.</p>
+		<p class="question">14. Чем отличаются Node.appendChild(), Node.insertBefore() и Element.insertAdjacentHTML()?</p>
+		<p class="answer">Node.appendChild() добавляет ноду в конец списка дочерних элементов родительской ноды; Node.insertBefore() добавляет элемент в список дочерних,но перед указанным в параметрах метода элементом; Element.insertAdjacentHTML() вставляет элемент конкретно указанную в параметрах, позицию...........................</p>
 	</div>
 	<div class="pair dom">
-		<p class="question">13. Какие два метода используются для удаления элементов?</p>
-		<p class="answer">Первый метод удаляет дочерний элемент из списка элементов родительской ноды: parentElem.removeChild(el);
- второй – parentElem.removeChild(), принимает два параметра (newElem, elem) удаляет элемент «elem» заменяя его на новый «newElem».</p>
+		<p class="question">15. Что находится в свойстве Element.innerHTML? А Element.outerHTML? Ответь, чем отличаются два следующих типа вставки:</p>
+		<p class="answer">В свойстве innerHTML находиться полученное содержимое HTML страницы, а в свойстве Element.innerHTML будет находиться содержимое элемента в виде строки. В Element.outerHTML находиться содержимое єлемента целиком, но его нелзя изменить. Переменная, в которую записан Element.outerHTML при попітке замені останеться со старім значением.
+		В первом случае создаеться правильная разметка, с вложенным тегом strong, во втором - текстовая нода, акцентирование текста не происходит.</p>
 	</div>
+	
+	<div class="pair events">
+		<p class="question">1. Что такое событие? Какие бывают события?</p>
+		<p class="answer">Собятие, это сигнал браузера на какое-либо действие. Например на действие клавиатуры (keydown,keyup), нажатие мыши (click,contextmenu), а так же на движение мышью, наведение курсором на элемент, на загрузку документа, отправку формы.</p>
 	</div>
+	<div class="pair events">
+		<p class="question">2. Как можно привязывать обработчики к событию? Какие есть недостатки у разных способов привязки к событиям?</p>
+		<p class="answer">Самый простой способ - прямо в разметке, использовать атрибуты HTML с приставкой on. Другой способ - обращение к свойству элемента (on'event'). Минус двух вышеуказанных способов в том, что на один элемент не повесить более одного обработчика. Третий способ - счетчик, то есть метод addEventListener; недостатки - его труднее удалить или заменить.</p>
+	</div>
+	<div class="pair events">
+		<p class="question">3. Что такое "делегирование"? В чем преимущество использования делегирования?</p>
+		<p class="answer">Делегирование - назначение обработчика на общего родителя нескольких элементов. Преимущество в том, что когда много элементов нужно обработать одним обработчиком, не нужно назначаь его каждому.</p>
+	</div>
+	<div class="pair events">
+		<p class="question">4. Как удалить обработчик события?</p>
+		<p class="answer">Для удаления обработчика используют метод removeEventListener('действие', ссылка на функцию)</p>
+	</div>
+	<div class="pair events">
+		<p class="question">5. Чему равен this в функции-обработчике события? 
+		Какая есть особенность у стрелочных функций и this?</p>
+		<p class="answer">Внутри обработчика this ссылаеться на элемент, на котором сработал обработчик. Стрелочные функции на создают своего this, поэтому внутри такой функции и снаружи this будет одинаковый.</p>
+	</div>
+	<div class="pair events">
+		<p class="question">6. Что такое "захват" и "всплытие". Какую роль они играют?</p>
+		<p class="answer">Событие состоит из трех фаз: захват - достижение - всплытие. Это характеризует движение обработчика по элементам DOM-дерева. От корневого элемента до того, на котором сработало событие - захват; обратно: вложенный элемент - родитель - родитель - корневой элемент - всплытие. </p>
+	</div>
+	<div class="pair events">
+		<p class="question">7. Что такое объект Event? Какую информацию он хранит?</p>
+		<p class="answer">Объект Event это первый аргумент, передаваемый функции-обработчику, в котором храниться детальное описание события. Он хранит такие детали как тип события, родительский и дочерний элемент, координаты курсора или введенный символ...</p>
+	</div>
+	<div class="pair events">
+		<p class="question">8. Как отменить событие по умолчанию?</p>
+		<p class="answer">Первый способ - использовать метод event.preventDefault(). Когда обработчик назначен не через счетчик событий, можно вернуьт false из обработчика.</p>
+	</div>
+	<div class="pair events">
+		<p class="question">9. Как остановить "всплытие" на каком-то элементе? Почему это нужно делать с осторожностью?</p>
+		<p class="answer">Для остановки всплытия существует метод event.stopPropagation, а так же event.stopImmediatePropagation... 
+		</p>
+	</div>
+
+</div>
 	<script src="common.js"></script>
 </body>
 </html>
